# math_viz

./: CMakeLists.txt  README.md  _notes.txt
src/: T15_camera.cpp  T3_triangle.cpp  T4_shaders.cpp  T4_shaders_multi.cpp  T5_uniforms.cpp  T6_translation.cpp  T7_rotation.cpp  main.cpp  multi_3d.cpp
src/glad/: glad.c  glad.h
src/multi_utils/: camera.cpp  camera.h  constants.h  cube.cpp  cube.h  game_object.cpp  game_object.h  mesh.cpp  mesh.h  picking_technique.cpp  picking_technique.h  picking_texture.cpp  picking_texture.h  shaders.cpp  shaders.h  world_transform.cpp  world_transform.h
src/ogl_utils/: ogldev_math_3d.cpp
src/programs/: program.cpp  program.h  rectangle.hpp
src/programs/T15/: camera.h  constants.h  game_object.cpp  game_object.h  world_transform.cpp  world_transform.h
src/programs/T4/: triangle.cpp  triangle.h
src/rendering/: shader.cpp  shader.h  vertexmemory.hpp
src/shaders/: picking.fs  shader2.vs
src/shaders/T15/: shader.vs
src/shaders/T4/: shader.fs  shader.vs
